Fixed button positioning on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -148,7 +148,7 @@ nav > a:first-child {
 #flagship h1 {
 	font-family: "Source Serif Pro", serif;
 	font-size: 4rem;
-	padding-top: 40vh;
+	padding-top: 30vh;
 	text-transform: none;
 }
 
